<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_auto_start"
        android:checkable="true"
        android:title="@string/auto_start_after_boot" />
    <item
        android:id="@+id/item_dump_log"
        android:title="@string/dump_log" />
    <item
        android:id="@+id/item_feedback"
        android:title="@string/feedback">
        <menu>
            <item
                android:id="@+id/item_feedback_group"
                android:title="@string/feedback_group" />
            <item
                android:id="@+id/item_feedback_email"
                android:title="@string/feedback_email" />
            <item
                android:id="@+id/item_feedback_issues"
                android:title="@string/feedback_issues" />
        </menu>
    </item>
    <item
        android:id="@+id/item_about"
        android:title="@string/about" />

</menu>